--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "browserify": "^16.2.3",
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "uniq": "^1.0.1"
   }
 }
